Bug 223797 - Kdevelop crashes with segmentation fault randomly (svn rev1078366)
Summary: Kdevelop crashes with segmentation fault randomly (svn rev1078366)
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-22 15:56 UTC by Niels van Mourik
Modified: 2010-01-22 16:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Niels van Mourik 2010-01-22 15:56:37 UTC
Application that crashed: kdevelop
Version of the application: 3.9.97 (using KDevPlatform 0.9.97)
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.2
Operating System: Linux 2.6.28-16-generic x86_64
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
I'm testing the subversion trunk/ version of both kdevplatform and kdevelop at this revision. Using a clean ~/.kde it's very stable but after importing two (PHP) projects it randomly crashes several times.

Hopefully this bug report is usefull and identified a new problem.

Keep up the perfect work!

 -- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
[Current thread is 0 (LWP 3295)]

Thread 5 (Thread 0x7fea5eb1a950 (LWP 3296)):
#0  0x00007fea68e5556d in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fea6f2e4cf7 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007fea6bdefcce in KDevelop::DUChainPrivate::CleanupThread::run (this=0x15d87d0) at /home/roeland/.apps/kdevplatform/language/duchain/duchain.cpp:286
#3  0x00007fea6f2e3d35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007fea68e513ba in start_thread () from /lib/libpthread.so.0
#5  0x00007fea6da1afcd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fea55e4e950 (LWP 3300)):
#0  0x00007fea6da11496 in poll () from /lib/libc.so.6
#1  0x00007fea6819f77f in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007fea6819fa7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007fea6f3f6aae in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#4  0x00007fea6f3cbf42 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#5  0x00007fea6f3cc314 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#6  0x00007fea6f2e0dc8 in QThread::exec () from /usr/lib/libQtCore.so.4
#7  0x00007fea6f2e3d35 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007fea68e513ba in start_thread () from /lib/libpthread.so.0
#9  0x00007fea6da1afcd in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fea51da1950 (LWP 3331)):
#0  0x00007fea68e552e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fea6f2e4d19 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007fea70af65e4 in ?? () from /usr/lib/libthreadweaver.so.4
#3  0x00007fea70af8d93 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0x00007fea70af8dac in ?? () from /usr/lib/libthreadweaver.so.4
#5  0x00007fea70af8dac in ?? () from /usr/lib/libthreadweaver.so.4
#6  0x00007fea70af730f in ?? () from /usr/lib/libthreadweaver.so.4
#7  0x00007fea70af7769 in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#8  0x00007fea6f2e3d35 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007fea68e513ba in start_thread () from /lib/libpthread.so.0
#10 0x00007fea6da1afcd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fea51314950 (LWP 3333)):
#0  0x00007fea68e552e9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fea6f2e4d19 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#2  0x00007fea70af65e4 in ?? () from /usr/lib/libthreadweaver.so.4
#3  0x00007fea70af8d93 in ?? () from /usr/lib/libthreadweaver.so.4
#4  0x00007fea70af730f in ?? () from /usr/lib/libthreadweaver.so.4
#5  0x00007fea70af7769 in ThreadWeaver::Thread::run () from /usr/lib/libthreadweaver.so.4
#6  0x00007fea6f2e3d35 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007fea68e513ba in start_thread () from /lib/libpthread.so.0
#8  0x00007fea6da1afcd in clone () from /lib/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fea72650750 (LWP 3295)):
[KCrash Handler]
#5  0x0000000000780000 in ?? ()
#6  0x00007fea5d61b454 in GenericManagerListJob::startNextJob (this=0x31dfb00) at /home/roeland/.apps/kdevplatform/plugins/genericprojectmanager/genericmanagerlistjob.cpp:66
#7  0x00007fea5d61b560 in GenericManagerListJob::qt_metacall (this=0x31dfb00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x5657470)
    at /home/roeland/.apps/kdevplatform/build/plugins/genericprojectmanager/genericmanagerlistjob.moc:86
#8  0x00007fea6f3dd5d8 in QObject::event () from /usr/lib/libQtCore.so.4
#9  0x00007fea6e5f1f4d in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#10 0x00007fea6e5fa18a in QApplication::notify () from /usr/lib/libQtGui.so.4
#11 0x00007fea6fb41abb in KApplication::notify () from /usr/lib/libkdeui.so.5
#12 0x00007fea6f3cd6ac in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#13 0x00007fea6f3ce31a in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/libQtCore.so.4
#14 0x00007fea6f3f6e03 in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007fea6819c20a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#16 0x00007fea6819f8e0 in ?? () from /usr/lib/libglib-2.0.so.0
#17 0x00007fea6819fa7c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#18 0x00007fea6f3f6a8f in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#19 0x00007fea6e68abdf in ?? () from /usr/lib/libQtGui.so.4
#20 0x00007fea6f3cbf42 in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#21 0x00007fea6f3cc314 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#22 0x00007fea6f3ce5e4 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#23 0x000000000040622d in main (argc=1, argv=0x7fff5301c608) at /home/roeland/.apps/kdevelop/app/main.cpp:209

Reported using DrKonqi
Comment 1 Milian Wolff 2010-01-22 16:22:06 UTC
SVN commit 1078662 by mwolff:

make sure there are pending jobs before starting the next one.
I suspect that the signal-detour could potentially lead to cases
where there is no job left?

BUG: 223797


 M  +3 -0      genericmanagerlistjob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1078662