make sure there are pending jobs before starting the next one. I suspect that the signal-detour could potentially lead to cases where there is no job left?

BUG: 223797